--- a/styles/nav.css
+++ b/styles/nav.css
@@ -25,7 +25,3 @@ nav ul li:last-child img {
   object-fit: cover;
   border-radius: 50%;
 }
-
-#profile p {
-  font: var(--text-md);
-}
